# collab-web-editor

./: .gitignore  Makefile  README.md  index.html  package-lock.json  package.json  style.css  vite.config.js
docs/: architecture.md  usage.md
public/: service-worker.js
public/wasm/: rust_wasm.js  rust_wasm_bg.wasm
rust-wasm/: Cargo.toml
rust-wasm/src/: lib.rs  promisegrid.rs
src/: automerge-sync.js  codemirror-binding.js  config.js  editor.js  main.js  menu-system.js
src/export/: handlers.js
src/github/: example-integration.js  githubMenuIntegration.js  githubService.js
src/setup/: documentCopy.js  userSetup.js
src/ui/: documentStats.js  errors.js  focusTrap.js  githubCommitDialog.js  githubDialog.js  githubPullDialog.js  logging.js  preferencesDialog.js  shortcutManager.js
src/utils/: clientId.js  documentRegistry.js  logger.js  sanitizeFilename.js  timeUtils.js
src/wasm/: diffWasm.js  initWasm.js
