[package]
name = "rust_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
regex = { version = "1.5", default-features = false, features = ["std"] }

# NEW: PromiseGrid dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
js-sys = "0.3"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]
